--- a/index.html
+++ b/index.html
@@ -131,6 +131,57 @@
                     <div class="col-md-8">
                         <h3 class="title-big mb-sm-5 mb-4">最近更新</h3>
                         <div class="xcblog-blog-list">
+                                                        <div class="row xcblog-blog-item" data-date="2026-02-24">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2026-2-24-shadowrocket-node.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/2185035859b7710c0e4307b2d9117bf7.webp" alt="2月24日更新20.6M/S，2025年最新高速V2ray节点/Clash节点/Trojan节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2026-2-24-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">2月24日更新20.6M/S，2025年最新高速V2ray节点/Clash节点/Trojan节点/Singbox节点/SSR节点/Shadowrocket节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了韩国、日本、加拿大、新加坡、香港、欧洲、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        2月24日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2026-02-23">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2026-2-23-node-share-links.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="2月23日更新20.6M/S，2025年最新高速Shadowrocket节点/Clash节点/Trojan节点/SSR节点/V2ray节点/Singbox节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2026-2-23-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">2月23日更新20.6M/S，2025年最新高速Shadowrocket节点/Clash节点/Trojan节点/SSR节点/V2ray节点/Singbox节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了新加坡、加拿大、日本、韩国、欧洲、香港、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        2月23日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2026-02-21">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2026-2-21-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月21日更新19.8M/S，2025年最新高速Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Trojan节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2026-2-21-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">2月21日更新19.8M/S，2025年最新高速Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Trojan节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了加拿大、新加坡、欧洲、香港、日本、美国、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        2月21日                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row xcblog-blog-item" data-date="2026-02-20">
                                 <div class="col-lg-4">
                                     <div class="position-relative">
@@ -420,57 +471,6 @@
                                         2月2日                                    </p>
                                 </div>
                             </div>
-                                                        <div class="row xcblog-blog-item" data-date="2026-02-01">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2026-2-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="2月1日更新21.6M/S，2025年最新高速V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2026-2-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">2月1日更新21.6M/S，2025年最新高速V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Trojan节点/Singbox节点订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了美国、日本、香港、欧洲、新加坡、韩国、加拿大等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        2月1日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2026-01-31">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2026-1-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="1月31日更新19.1M/S，2025年最新高速Clash节点/Trojan节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2026-1-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">1月31日更新19.1M/S，2025年最新高速Clash节点/Trojan节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了韩国、香港、新加坡、欧洲、美国、日本、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        1月31日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2026-01-30">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2026-1-30-free-subscribe-node.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="1月30日更新18.5M/S，2025年最新高速Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Trojan节点/Clash节点订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2026-1-30-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">1月30日更新18.5M/S，2025年最新高速Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Trojan节点/Clash节点订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了欧洲、美国、日本、韩国、新加坡、香港、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        1月30日                                    </p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-4 w3l-services">
@@ -479,58 +479,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-1-21-clash-node-daily-updates.htm">1月21日更新20.8M/S，2025年最新高速SSR节点/Clash节点/Trojan节点/Shadowrocket节点/V2ray节点/Singbox节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、日本、欧洲、新加坡、美国、韩国等地区,最高速度可达20.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-1-19-free-clash.htm">1月19日更新21.3M/S，2025年最新高速Shadowrocket节点/V2ray节点/Trojan节点/Clash节点/SSR节点/Singbox节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、美国、日本、欧洲、香港、新加坡等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-2-18-clash-v2ray-ss-ssr.htm">2月18日更新20.4M/S，2025年最新高速Trojan节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、香港、新加坡、美国、日本等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-1-31-free-v2ray-subscribe.htm">1月31日更新19.1M/S，2025年最新高速Clash节点/Trojan节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、香港、新加坡、欧洲、美国、日本、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-2-3-free-v2ray-subscribe.htm">2月3日更新20.5M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/Trojan节点/SSR节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、韩国、美国、新加坡、欧洲、加拿大等地区,最高速度可达20.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-2-5-free-ssr-node.htm">2月5日更新21M/S，2025年最新高速V2ray节点/Singbox节点/Clash节点/Trojan节点/Shadowrocket节点/SSR节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、韩国、加拿大、欧洲、日本、香港等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2026-1-29-node-share.htm">1月29日更新19M/S，2025年最新高速Singbox节点/Trojan节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、日本、美国、韩国、香港、新加坡、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -549,8 +499,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-1-27-free-node-subscribe.htm">1月27日更新18.6M/S，2025年最新高速Singbox节点/V2ray节点/Trojan节点/SSR节点/Shadowrocket节点/Clash节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、欧洲、香港、美国、新加坡、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2026-1-16-free-v2ray.htm">1月16日更新20.2M/S，2025年最新高速SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、香港、新加坡、韩国、欧洲、日本等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -559,8 +509,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-1-22-node-share.htm">1月22日更新22.9M/S，2025年最新高速SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/Trojan节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、韩国、美国、新加坡、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2026-2-16-free-clash.htm">2月16日更新18.4M/S，2025年最新高速SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Trojan节点/Singbox节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、香港、日本、新加坡、加拿大、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -569,8 +519,58 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2026-2-9-node-share-links.htm">2月9日更新19.5M/S，2025年最新高速Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/Trojan节点/SSR节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、美国、香港、新加坡、欧洲、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2026-1-25-clash-node-daily-updates.htm">1月25日更新21.8M/S，2025年最新高速V2ray节点/SSR节点/Trojan节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、美国、韩国、加拿大、香港、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2026-2-17-node-share.htm">2月17日更新19.5M/S，2025年最新高速Trojan节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、欧洲、美国、香港、新加坡、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2026-2-21-free-clash-subscribe.htm">2月21日更新19.8M/S，2025年最新高速Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Trojan节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、欧洲、香港、日本、美国、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2026-1-14-clash-v2ray-ss-ssr.htm">1月14日更新21.6M/S，2025年最新高速V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、日本、香港、欧洲、新加坡、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2026-1-17-free-node-subscribe.htm">1月17日更新20M/S，2025年最新高速Trojan节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、欧洲、韩国、日本、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2026-1-30-free-subscribe-node.htm">1月30日更新18.5M/S，2025年最新高速Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Trojan节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、日本、韩国、新加坡、香港、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -581,7 +581,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
+                                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
                                 <h4><span class="badge" style="float: right;">18</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
                             </div>
         </div>
